fix(styles): css styles broken in the app

--- a/src/layouts/subpage-layout.css
+++ b/src/layouts/subpage-layout.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .header {
   display: flex;
   align-items: center;
